# dota-oracle

./: .env.example  .gitignore  CLAUDE.md  README.md  biome.json  package.json  pnpm-lock.yaml  requirements.txt  tsconfig.base.json  vercel.json
.github/workflows/: ci.yml
api/: index.py
apps/api/: pyproject.toml
apps/api/app/: main.py  schemas.py  settings.py
apps/api/app/data/: meta.7.41c.json  meta.7.41d.json
apps/api/app/routers/: cron.py  live.py  matchups.py  meta.py  player.py  recent.py
apps/api/app/services/: heroes.py  matchups.py  meta.py  meta_refresh.py  opendota.py  redis.py  steamid.py  stratz.py
apps/api/tests/: test_health.py  test_live.py  test_matchups.py  test_meta.py  test_meta_refresh.py  test_player.py  test_recent.py
apps/web/: index.html  package.json  vite.config.ts
apps/web/public/: robots.txt  site.webmanifest  sitemap.xml
apps/web/src/: App.tsx  DraftOracle.tsx  index.css  main.tsx
apps/web/src/coach/: useCoach.ts
apps/web/src/components/: CoachPanel.tsx  HeroPicker.tsx  LiveImport.tsx  MetaStatus.tsx  MicDictate.tsx  Portrait.tsx  PosSelect.tsx  RecentImport.tsx  TierPill.tsx
apps/web/src/lib/: api.ts  colors.ts  storage.ts
mockups/: coach-flow.html
prototype/: DraftOracle.jsx  architecture.html
